syntax = "proto3";

package grpc_web_demo.echo.v1;


option go_package = ".;pb";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}